# shroombot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  build.sh  deploy.sh  pyproject.toml
.deploy/: Dockerfile
shroombot/: anonymizer.py  anonymizer_test.py  api_server.py  main.py  server.py  server_test.py  shroomgen.py  shrooms.csv  telegram.py  telegram_test.py
